# kinfu_remake

./: CMakeLists.txt
apps/: CMakeLists.txt
kfusion/: CMakeLists.txt
kfusion/include/kfusion/: types.hpp
kfusion/src/: core.cpp
